# ousagi

./: .gitignore  LICENSE  Makefile  README.md
.claude/: settings.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
puppler/: dune  dune-project  gen_flags.sh  poppler_stubs.c  puppler.ml  puppler.mli  puppler.opam
pusagi_haskell/: Makefile  cabal.project  pusagi.cabal
pusagi_haskell/app/: Main.hs  TemplateData.hs
pusagi_ocaml/: Makefile  dune  gen_flags.sh  poppler_stubs.c  pusagi.ml  template_data.ml
pusagi_qml6/: CMakeLists.txt  Makefile  main.cpp  pusagi.qml  resources.qrc
pusagi_qt6/: CMakeLists.txt  pusagi.cpp  resources.qrc
pusagi_rust/: Cargo.toml  Makefile  build.rs
pusagi_rust/src/: main.rs
pusagi_vala/: Makefile  pusagi.gresource.xml  pusagi.vala
sample_vala/: .uncrustify.cfg  Makefile  README.md  pusagi.vala
scripts/: generate_template_modules.py
template/: Makefile  header.tex  slide.md
