cabal-version:      3.0
name:               pusagi
version:            0.1.0.0
synopsis:           PDF presentation tool
license:            MIT
build-type:         Simple

executable pusagi
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NumericUnderscores, MultiWayIf
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base              >= 4.7  && < 5,
        gi-gtk            >= 3.0  && < 3.1,
        gi-gdk            >= 3.0  && < 3.1,
        gi-cairo          >= 1.0  && < 1.1,
        gi-cairo-render   >= 0.1  && < 0.2,
        gi-cairo-connector >= 0.1 && < 0.2,
        gi-glib           >= 2.0  && < 2.1,
        gi-gobject        >= 2.0  && < 2.1,
        gi-pango          >= 1.0  && < 1.1,
        gi-pangocairo     >= 1.0  && < 1.1,
        gi-poppler,
        haskell-gi-base   >= 0.26 && < 0.27,
        text,
        transformers,
        data-default,
        filepath,
        directory
